--- a/Application/Student/View/Public/header.html
+++ b/Application/Student/View/Public/header.html
@@ -29,7 +29,7 @@
                         <a href="{:U('Index/index')}">首页</a>
                     </li>
                     <li data-id="60" class="">
-                        <a href="{:U('Student/index')}">论文管理</a>
+                        <a href="{:U('Paper/index')}">论文管理</a>
                     </li>
                     <li data-id="61" class="">
                         <a href="{:U('Periodical/index')}">期刊管理</a>
